--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class="carousel-item">
-                <img src="./img/carousel-2.jpg" class="d-block w-100" alt="imagem">
+                <img src="./img/carousel-2.JPG" class="d-block w-100" alt="imagem">
                 <div class="carousel-caption d-none d-md-block">
                     <h1>Encomendas Especiais</h1>
                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eaque minima vel eius cumque consequatur natus soluta! Dignissimos, doloremque molestias. Quaerat temporibus corrupti reiciendis dignissimos maiores nemo libero veritatis atque.</p>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="carousel-item ">
-                <img src="./img/carousel-3.jpg" class="d-block w-100" alt="imagem">
+                <img src="./img/carousel-3.JPG" class="d-block w-100" alt="imagem">
                 <div class="carousel-caption d-none d-md-block">
                     <h1>Os Mais Pequenos</h1>
                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eaque minima vel eius cumque consequatur natus soluta! Dignissimos, doloremque molestias. Quaerat temporibus corrupti reiciendis dignissimos maiores nemo libero veritatis atque.</p>
